# python-fastapi-poetry-skeleton

./: Dockerfile  LICENSE  Makefile  README.md  gunicorn.conf.py  pyproject.toml
src/app/: configuration.py  main.py
src/app/routes/: greeter.py
