[tool.poetry]
name = "aux"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "app", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.105.0"
pydantic-settings = "2.7.0"

[tool.poetry.group.dev.dependencies]
ruff = "0.8.3"
uvicorn = "0.34.0"

[tool.poetry.group.test.dependencies]
pytest = "^6.0.0"
pytest-mock = "*"

[tool.poetry.group.docker.dependencies]
gunicorn="23.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
